<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/top_constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/type"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/like"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/name"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/type"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="@id/name"/>


        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/description"
            app:layout_constraintTop_toBottomOf="@id/description"/>

        <TextView
            android:id="@+id/period_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/period_prefix"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/quantity"
            app:layout_constraintTop_toTopOf="@id/quantity"/>

        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/two"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/period_prefix"
            app:layout_constraintTop_toTopOf="@id/period_prefix"/>


        <TextView
            android:id="@+id/priority_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/priority_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/two"
            app:layout_constraintLeft_toLeftOf="@id/priority_header"
            app:layout_constraintRight_toRightOf="@id/priority_header"
            app:layout_constraintTop_toBottomOf="@id/priority_header"/>


</androidx.constraintlayout.widget.ConstraintLayout>
