<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginBottom="8dp"
                app:backgroundTint="@color/grey"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginBottom="8dp"
                app:backgroundTint="@color/grey"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <TextView
                android:text="@string/priority_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:entries="@array/priority_list"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/good_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good"/>

                <RadioButton
                    android:id="@+id/bad_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_weight="1"
                    android:text="@string/bad"/>

            </RadioGroup>

            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                app:backgroundTint="@color/grey"
                android:layout_marginBottom="8dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/period_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period"
                app:backgroundTint="@color/grey"
                android:layout_marginBottom="8dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <HorizontalScrollView
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/hue2"
                        android:scaleType="centerCrop"
                        android:layout_alignEnd="@id/linear_layout"
                        android:layout_alignStart="@id/linear_layout"
                        android:layout_alignTop="@id/linear_layout"
                        android:layout_alignBottom="@id/linear_layout"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:id="@+id/linear_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/padding_vertical"
                        android:paddingBottom="@dimen/padding_vertical">
                    </LinearLayout>

                </RelativeLayout>

            </HorizontalScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/selected_color"
                    android:layout_width="@dimen/square_size"
                    android:layout_height="@dimen/square_size"
                    android:src="@drawable/square"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:id="@+id/hsv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hsv_formatted"
                    app:layout_constraintTop_toTopOf="@id/selected_color"
                    app:layout_constraintLeft_toRightOf="@id/selected_color"
                    app:layout_constraintRight_toRightOf="parent"/>


                <TextView
                    android:id="@+id/rgb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rgb_formatted"
                    app:layout_constraintTop_toBottomOf="@id/hsv"
                    app:layout_constraintLeft_toRightOf="@id/selected_color"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/grey"
        app:tint="@color/colorWhite"
        app:rippleColor="@color/colorWhite"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_action_done"/>

</FrameLayout>
